# Text-Analyzer

./: CMakeLists.txt  compile.bat  input_file1.in
files/: input_file2.in  input_file3.in
include/: analyzer.hpp  analyzer_factory.hpp  file_loader.hpp  file_writer.hpp  text_analysis_system.hpp  thread_pool.hpp
src/: analyzer.cpp  analyzer_factory.cpp  file_loader.cpp  file_writer.cpp  main.cpp  text_analysis_system.cpp  thread_pool.cpp
